[gd_scene load_steps=2 format=3 uid="uid://bjvtquos2r8cj"]

[ext_resource type="Script" uid="uid://duxck2ovthypk" path="res://scenes/support_screens/progress_update.gd" id="1_gbhf4"]

[node name="ProgressUpdate" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gbhf4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -221.0
offset_right = 285.5
offset_bottom = 302.25
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Close" type="Button" parent="PanelContainer/VBoxContainer"]
z_index = 2
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = " X "

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Title"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="stepsLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="xpLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="LootTitle" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="LootList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
